# backtester

./: .gitlab-ci.yml  Cargo.toml  portfolio_analysis.ipynb
examples/: short_when_rsi_crosses_70.rs
src/: backtester.rs  execution.rs  lib.rs  main.rs
src/direction/: mod.rs
src/market_simulation/: mod.rs
src/model/: mod.rs
src/ohlcv/: mod.rs
src/ohlcv/source/: csv.rs  mod.rs  null.rs  ohlcv_source_collection.rs
src/order/: base_order.rs  market_order.rs  mod.rs  order_id.rs  order_id_generator.rs  order_status.rs
src/order/policy/: market_order_policy.rs  mod.rs  simple_order_policy.rs  stop_order_policy.rs
src/portfolio/: mod.rs
src/signal/: mod.rs
src/signal/detector/: always.rs  mod.rs  once.rs
src/strategy/: mod.rs  strategy_manager.rs
src/symbol/: mod.rs
src/util/: get_order_pairs.rs  mod.rs  record_parser.rs  write_order_pairs_to_csv.rs
tests/: test_backtest_order_every_candle.rs
