[package]
name = "backtester"
version = "0.1.0"
authors = ["Carl Levasseur <carl.levasseur@protonmail.com>"]

[dependencies]
time = "0.1"
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
csv = "1.0.0-beta.4"
uuid = { version = "0.5", features = ["v5"] }
snowflake = { version = "1.2", features = ["serde_support"] }

# The core APIs, including the Serialize and Deserialize traits. Always
# required when using Serde.
serde = "1.0"

# Support for #[derive(Serialize, Deserialize)]. Required if you want Serde
# to work for structs and enums defined in your crate.
serde_derive = "1.0"

# Each data format lives in its own crate; the sample code below uses JSON
# but you may be using a different one.
serde_json = "1.0"
